src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__dependencies__new_krate_with_dependency.snap
---
source: src/tests/krate/publish/dependencies.rs
expression: crates
snapshot_kind: text
---
[
  {
    "name": "new_dep",
    "vers": "1.0.0",
    "deps": [
      {
        "name": "foo-dep",
        "req": "^1.0.0",
        "features": [],
        "optional": false,
        "default_features": true,
        "target": null,
        "kind": "normal"
      }
    ],
    "cksum": "b1ce14dbe59036a964369747770d2d64695039065384b1ab56f09a59525300a6",
    "features": {},
    "yanked": false
  }
]
