src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__dependencies__new_with_renamed_dependency.snap
---
source: src/tests/krate/publish/dependencies.rs
expression: crates
snapshot_kind: text
---
[
  {
    "name": "new-krate",
    "vers": "1.0.0",
    "deps": [
      {
        "name": "my-name",
        "req": ">0",
        "features": [],
        "optional": false,
        "default_features": true,
        "target": null,
        "kind": "normal",
        "package": "package-name"
      }
    ],
    "cksum": "78d9041c5262f137144a77dea8579e6281ff110b44fe7c4654f6ca132cccccaf",
    "features": {},
    "yanked": false
  }
]
